--- a/lib/views/home/index.html
+++ b/lib/views/home/index.html
@@ -1,6 +1,9 @@
 <div id="chat" class="row">
 
-	<div class="three columns menu"></div>
+	<div class="three columns menu">
+		<div class="profile"></div>
+		<div class="list"></div>
+	</div>
 
 	<div class="nine columns messages">
 
