--- a/lib/views/layouts/index.html
+++ b/lib/views/layouts/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Chathellup!</title>
+        <title><%- title %>!</title>
 
         <script src="public/js/thirds/jquery-1.11.2.min.js"></script>
         <script src="public/js/socket/index.js"></script>
