--- a/lib/public/css/index.css
+++ b/lib/public/css/index.css
@@ -1,18 +1,7 @@
 /* Main Css file */
 
-.header{
-}
 
-.logo{
-
-}
-
-.body{
-}
-
-.footer{
-}
-
+/*
 #chat{
 	height: 400px;
 	margin-top: 4%;
@@ -61,3 +50,4 @@
 	}
 
 }
+*/
