--- a/lib/views/layouts/footer.html
+++ b/lib/views/layouts/footer.html
@@ -1,7 +1,5 @@
-<div class="row">
-	<div class="twelve column">
-
-		<p>This is the footer. Hey d00d i want to get visible too! Come on, just a scroll</p>
-
-	</div>
+<div class="alert alert-info" role="alert">
+	<p>This is the footer. Hey d00d i want to get visible too! Come on, just a scroll</p>
 </div>
+
+
