--- a/lib/views/layouts/header.html
+++ b/lib/views/layouts/header.html
@@ -1,6 +1,5 @@
-<div class="row">
-	<div class="twelve columns">
-		<h2 class="logo">Chathellup!</h2>
-		<h6>People these days... they don't curse so much as the old days.</h6>
-	</div>
+<div class="alert alert-info" role="alert">
+	<a class="btn" href="/"><h2>Chathellup!</h2></a>
+	<p>People these days... they don't curse so much as the old days.</p>
 </div>
+
