--- a/lib/views/rooms/general.html
+++ b/lib/views/rooms/general.html
@@ -8,14 +8,14 @@
 	<div class="col-md-9">
 		
 		<div
-			id="text" class="row"
+			id="text"
+			class="row"
 			style="
 				height: 400px;
 				background-color: #EEE;
 				padding: 2%;
 			"
 		>
-		Some text
 		</div>
 
 		<div id="message-submit" class="row" onsubmit="false">
